--- a/journal/modernized/03-chapter-3.adoc
+++ b/journal/modernized/03-chapter-3.adoc
@@ -170,8 +170,8 @@ I attended their meetings on the first-day in the forenoon and afternoon,
 which were large and I hope in the main, good meetings; the next were at Rathangen,
 and Timahoe, which were comfortable.
 From there I went to Dublin, and lodged at my dear friend Peter Judd`'s,
-and was in and about Dublin nine days, and at,
-several good living meetings among Friends in that city.
+and was in and about Dublin nine days,
+and at several good living meetings among Friends in that city.
 There was a remnant of dear Friends in some parts of that nation,
 whom I had comfort of mind in going to see, and visit in the love of God.
 It having been his blessed will to cast my lot in that part of the world,
@@ -205,7 +205,7 @@ Next day he accompanied me to the meeting appointed, which was a solid time;
 the day following I went to Izel, and had a meeting with the few Friends there,
 and although small it was a solid meeting; after that, I was at Pardsaw-Hall,
 which was a good meeting, so to Broughton,
-and had comfort of mind among Friend thereaway.
+and had comfort of mind among Friends thereaway.
 
 I then returned to Pardsaw-Hall again,
 and on the first-day of the week the meeting was very large,
@@ -285,7 +285,7 @@ From Kendal I went to Grayrig, which was a solid tender broken meeting,
 also to Preston Patrick, Windermere, and Hawkside, which meetings were to satisfaction,
 and ended well; then to Hight meeting, in Lancashire,
 which afforded some comfort to my mind.
-The next was at Swarthrnoor-hall, where George Fox belonged in his time,
+The next was at Swarthmoor-hall, where George Fox belonged in his time,
 which was a large and a good meeting; from there I went to Lancaster,
 and was at two meetings on the first-day of the week, which were large and comfortable.
 Here lived Lydia Lancaster, and Elizabeth Rawlinson, both worthy Friends,
@@ -426,12 +426,12 @@ this meeting was large and eminently affected with the sense of Divine life and 
 The next meetings were Ayrton, Settle, and Newton,
 which were mostly solid and satisfactory; the next was Narsedale, which was small,
 and I was fearful they were very cold professors of the right way of worship;
-m this I was silent.
+in this I was silent.
 I went to the Fiel, Proud-Preston, Longridge, and Elmaridge, and had meetings,
 which though mostly small were pretty satisfactory;
 the meetings following were Sowledale, Trowden, Marsden, and Trodmarden,
 and at another place, which were generally large and edifying.
-I went next to the meetings at Hold ham, Manchester, Langtree, Aston, Bickerstaff,
+I went next to the meetings at Holdham, Manchester, Langtree, Aston, Bickerstaff,
 and Liverpool, some of which were pretty large and solidly comfortable;
 from Liverpool I went to Penketh, Warrington, and Framby,
 which meetings were large and uniting seasons to the honest-hearted;
@@ -480,7 +480,7 @@ At the last place I was told, that the people when they heard of the meeting int
 said they would come to see the outlandish man, and many came who behaved soberly,
 and Divine life prevailed that day among us to the comfort of my mind.
 I went forward to two meetings in my way to Worcester, at distant places;
-at Worcester the meetings were large '`and solid,
+at Worcester the meetings were large and solid,
 and though some professors appeared to be gone out from the way of the self-denying life,
 into much liberty and extravagance,
 yet I believe it was a time of visitation to their souls.
@@ -563,8 +563,8 @@ was also now an encouragement to me in the way of my religious service.
 From hence I went forward into several counties,
 and was at a number of meetings in different places,
 which I hope were of profit to the people,
-and in some places they were large at two of them I had the company
-of my beloved friends Catherine Payton and Rachel Wilson,
+and in some places they were large.
+At two of them I had the company of my beloved friends Catherine Payton and Rachel Wilson,
 they being on their way to the yearly meeting at London.
 We went forward together to Reading,
 where I met with my dear worthy friend Samuel Hopwood, with whom when in Pennsylvania,
@@ -603,13 +603,13 @@ we had a good meeting at Darlington, then went forward to Durham, and Newcastle,
 at each of which towns we had meetings,
 and Friends were kind in assisting to get us on our way to Alnwick,
 where we had a small meeting,
-and lodged at John Doubleday`'s. Woe then proceeded to Kelso,
+and lodged at John Doubleday`'s. We then proceeded to Kelso,
 where we had two good solid meetings; then to Edinburgh,
 and had a meeting to some satisfaction; after which we had but one little meeting,
 which was in a Friend`'s house, until we got to Aberdeen,
 where we had two that were large,
 in which I hope the Lord`'s power was in dominion to solid comfort.
-From there we went to Kinswells, Inverary, and Old Meld rum,
+From there we went to Kinswells, Inverary, and Old Meldrum,
 and had meetings to some degree of satisfaction;
 the last named place was the furthest meeting we had in Scotland, which was pretty large.
 We came to Kilmuck, and were favoured with a comfortable meeting and somewhat large;
@@ -798,9 +798,9 @@ It was through the great preservation of the Almighty, who was,
 and is a God nigh at hand,
 who supported and preserved me in great probations and conflicts of soul,
 beyond my ability to set forth in words.
-I think it my duty to say.
-Good is the Lord and worthy to be greatly feared, praised, loved, honoured, worshipped,
-and obeyed!
+I think it my duty to say,
+_Good is the Lord and worthy to be greatly feared, praised,
+loved, honoured, worshipped, and obeyed!_
 His goodness, mercy and grace have been eminent for my preservation and salvation,
 that he would not allow me to be confounded,
 although he was pleased to permit great provings to befall me,
