--- a/journal/original/02-chapter-2.adoc
+++ b/journal/original/02-chapter-2.adoc
@@ -76,6 +76,8 @@ May I forever adore his great and eminent name, with all the true in heart,
 throughout all generations!
 He will not suffer those to be confounded who trust in him,
 and desire and endeavour faithfully to serve him.
+
+[.offset]
 A particular case concerning privateering, sometime before I left home,
 now comes into my mind to mention.
 Some great men of our city being concerned in fitting out vessels for that wicked business,
