--- a/journal/modernized/05-chapter-5.adoc
+++ b/journal/modernized/05-chapter-5.adoc
@@ -69,9 +69,9 @@ then took several meetings in Chester county,
 some of which were large and attended with relieving help,
 in which I enjoyed much comfort and unity among Friends,
 as I visited the several particular meetings; which were Kennet, Center, Birmingham,
-the Forks of Brandy wine.
-West and East Cain, Nantmill, Pikeland, Uwchland, Goshen, Newtown, Middletown,
-and Providence; to the last of which came my son-in-law Benedict Dorsey,
+the Forks of Brandywine, West and East Cain, Nantmill,
+Pikeland, Uwchland, Goshen, Newtown, Middletown, and Providence;
+to the last of which came my son-in-law Benedict Dorsey,
 with whom I came home to my habitation, in the enjoyment of a share of peace;
 having visited the afflicted, and several Friends families,
 and I trust faithfully laboured,
@@ -295,7 +295,7 @@ Although a very rough passage, we were mercifully preserved,
 for which my heart was thankful to the Lord.
 Lodged that night at William Morris`'s,
 and on the first-day of the week was at Trenton meeting,
-where assembled a pretty many people.
+where assembled a pretty many people,
 Friends and others; and although it was a hard suffering time to my spirit,
 wherein I was deeply baptized in that place,
 I had some comfort in the company of some Friends thereaway.
@@ -304,7 +304,7 @@ I came from there and lodged at Marmaduke Watson`'s, and the next night at John 
 and the day following had a meeting in Bordentown, to satisfaction in a good degree;
 then went to Samuel Satterthwaite`'s, and had a meeting the next day at Mansfield,
 at which, considering the short notice, and it being a wet day, there were many people,
-and We had a solid season together.
+and we had a solid season together.
 I went to Benjamin Field`'s,
 and the day following attended the monthly meeting at Crosswicks, which was large,
 and an open edifying season in the meeting for worship.
@@ -333,7 +333,7 @@ I then came with several Friends to the upper meeting on that river,
 which was large for that place, and tended to edification and comfort.
 I went home with Japhet Leeds, and he accompanied me that evening to Joseph Mapes`'s,
 where we lodged, and the next day were at a meeting near his house;
-from there proceeded to Cape May, in company with some Fi lends.
+from there proceeded to Cape May, in company with some Friends.
 Lodged at Isaac Townsend`'s, and was the next day at a large meeting for that place,
 at the Lower meetinghouse, to some degree of satisfaction,
 in which I laboured to turn the minds of the people
@@ -476,8 +476,7 @@ It is like the precious ointment upon the head, that ran down upon the beard,
 even Aaron`'s beard, that went down to the skirts of his garments.
 As the dew of Hermon, and as the dew that descended upon the mountains of Zion,
 for there the Lord commanded the blessing, even life forevermore!`"
-Psal.
-cxxxiii.
+Psalm 133.
 
 In the love unfeigned, I conclude, and am your real friend,
 
@@ -527,7 +526,7 @@ and I hope a time of profit to many.
 I was also at their youths`' meeting the next day,
 which was comfortably attended with the love of God, and with near unity with Friends.
 After meeting dined at Mahlon Kirkbride`'s, then rode through Delaware ford,
-and that day reached Samuel Worth`'s, and the next Joseph Shot well`'s,
+and that day reached Samuel Worth`'s, and the next Joseph Shotwell`'s,
 and the day following being the first of the week, was at two meetings at Rahway,
 with our friend Samuel Emlen, Jr., to some degree of satisfaction.
 
@@ -557,7 +556,7 @@ We were owned together in waiting upon the Lord by his living presence,
 and the dear afflicted Friend expressed,
 that she did not know that she ever had a more satisfactory time,
 and I hope it was a season of profit to several of us then present.
-On the first-day following w`'e were again at Westbury meeting, which was large,
+On the first-day following we were again at Westbury meeting, which was large,
 and I hope they were faithfully warned in gospel love, to the satisfaction of Friends.
 
 From Long Island we crossed over the Sound into Connecticut, to a place called Middlesex,
