--- a/journal/original/01-chapter-1.adoc
+++ b/journal/original/01-chapter-1.adoc
@@ -198,7 +198,7 @@ lest I should go too fast, or before my divine Guide,
 for they who go before they are sent, cannot profit the people,
 or have peace in themselves, and peace to me and to do the will of the Lord,
 was what I most desired.
-Oh I the earnest prayers that were in my heart that
+Oh! the earnest prayers that were in my heart that
 I might be rightly directed in all things,
 to the honour and praise of my blessed Lord and master.
 A degree of his mighty power would lay such constraints upon me,
@@ -260,7 +260,7 @@ and what I had to say in their hearing was well received.
 After I had served out my apprenticeship, I wrought journey-work,
 and lived with my master until his death, which was soon after I was free,
 and then wrought with another Friend in the city some time.
-Having an opportunity to go to Rhode-Island, the place where my father was born,
+Having an opportunity to go to Rhode Island, the place where my father was born,
 and several of his relations living there, I was desirous to see them,
 having an account of some estate that was my father`'s, laying in that country.
 On this account, and to see my relations and friends, I took a journey in the year 1731,
@@ -275,7 +275,7 @@ The first meeting we went to, was at Burlington,
 and from thence to several others in New Jersey, as Little-Egg-Harbour, Manesquan,
 Shrewsbury and Woodbridge, and so to New York, to meetings on the main,
 the yearly meeting at Flushing,
-and to Friends`' meetings pretty generally on Long-Island;
+and to Friends`' meetings pretty generally on Long Island;
 several of which were much to satisfaction and comfort.
 I was glad to see and find the near unity that was among Friends, where our lot was cast.
 
@@ -286,8 +286,8 @@ Their conversation, also their principles, through that government,
 being greatly different from Friends; and although high in profession of religion,
 they seemed to me very little acquainted with the Light and Spirit of Christ.
 It was a dark time, in which I went through much deep inward suffering.
-We passed along until we got to Kingstown, near Rhode-Island, where we had a meeting,
-and then had one on Connanicut, and attended the yearly meeting at Newport, Rhode-Island,
+We passed along until we got to Kingstown, near Rhode Island, where we had a meeting,
+and then had one on Connanicut, and attended the yearly meeting at Newport, Rhode Island,
 which was very large, and I hope a good meeting to a solid remnant.
 My friend Henry Frankland, whom I accompanied thus far,
 proceeded on his journey to visit Friends in New-England,
@@ -361,6 +361,9 @@ have it in their experience to be the same now.
 It is a kingdom that consists of peace and joy,
 to the faithful subjects of his holy reign and government.
 
+[.small-break]
+'''
+
 In the year 1732,
 I found freedom in my mind to accompany my uncle Thomas Chalkley to visit
 some of the meetings of Friends in Bucks county and New Jersey,
@@ -386,13 +389,19 @@ Pennsylvania and New Jersey, and other places,
 as the motion of life engaged me from place to place;
 in a short time after I went as far as Shrewsbury, and some meetings thereaways.
 
+[.small-break]
+'''
+
 In the year 1734, I visited the meetings of Friends at Salem, Alloways Creek, Greenwich,
 Cape May and Great-Egg-Harbour, several of which were to satisfaction and comfort.
+
+[.small-break]
+'''
 
 In the year 1735, having a concern on my mind to visit Friends in New-England,
 and our monthly-meeting in this city giving me a certificate of their concurrence therewith,
 I accordingly proceeded, and was at several meetings in the Jerseys;
-from thence I went to the yearly meeting at Flushing, on Long-Island;
+from thence I went to the yearly meeting at Flushing, on Long Island;
 where was our friend Joseph Gill from Ireland, and several from Pennsylvania;
 the meetings were large, and religious labour was bestowed among the people.
 After it I visited Friends generally on that Island,
@@ -402,14 +411,14 @@ which begat great nearness in the best fellowship with the tender-minded.
 I then proceeded to meetings on the main, as West Chester, Mamaroneck, Rye,
 and several others; some of which were large and solid.
 
-After being at some meetings in Connecticut, I went forward to Rhode-Island,
+After being at some meetings in Connecticut, I went forward to Rhode Island,
 which was a wearisome travel.
 I got to Newport, and met with a kind reception from Friends,
 whom I visited in much love,
 there being a great number who make a profession of the way of truth;
 I was glad to see them,
 and could have been more so that all lived in possession of the same.
-From Rhode-Island I took meetings in my way to Nantucket,
+From Rhode Island I took meetings in my way to Nantucket,
 where on my arriving I was kindly taken home by Nathaniel Starbuck,
 whose heart and house were open to receive the messengers of Christ.
 On this Island I met with a great number of choice exemplary Friends,
@@ -441,7 +450,7 @@ Lydia Norton.
 After this, and the yearly meeting at Salem, I parted with Friends in much love,
 and came on my way homeward, visiting the meetings generally as they came in course,
 also some back places, and at Swansey, Greenwich, and some other meetings,
-and to Rhode-Island.
+and to Rhode Island.
 Though some of these meetings were hard and suffering times, and travelling wearisome,
 I was favoured with a share of peace in my own bosom.
 
@@ -450,8 +459,8 @@ I took my leave and came to Kingstown meeting, and then set forward,
 passing through Connecticut with Jacob Barney, who came with me as a guide,
 and was a good companion.
 We reached Mamarotieck, and stayed a meeting, at which were two marriages;
-from thence to Long-Island, where I made but a short stay,
-crossed at the Narrows and Staten-Island,
+from thence to Long Island, where I made but a short stay,
+crossed at the Narrows and Staten Island,
 and got to Woodbridge meeting on the first-day of the week,
 and the next day arrived at my own habitation, in about one week from Newport;
 and to my great satisfaction, found my family well,
@@ -475,6 +484,9 @@ the world and the uncertain things thereof, lead to forget what is certain to al
 that they must die,
 and after death that they are accountable to the Almighty author of their being.
 
+[.small-break]
+'''
+
 In the year 1737, being appointed with several Friends of our monthly meeting,
 to visit the families of Friends in this city,
 and having a concern on my mind for the service,
@@ -486,15 +498,18 @@ both in Pennsylvania and New Jersey; which I did in much love,
 often choosing to go on foot,
 having in my young years had many heavenly seasons in that way of travelling.
 
+[.small-break]
+'''
+
 In the year 1744, it was on my mind to visit again Friends in New England,
 and having the unity of our monthly meeting, and my friend Abel James for a companion,
 he being a young man I much esteemed.
-The latter end of the eleventh month we proceeded pretty direct to Long-Island,
+The latter end of the eleventh month we proceeded pretty direct to Long Island,
 where we visited most of the meetings of Friends,
 and the favourable presence and goodness of God being
 manifested in them gave me ease of mind,
 and united my heart to the faithful among them.
-When clear there, we went on the main, and travelled to Newport, on Rhode-Island,
+When clear there, we went on the main, and travelled to Newport, on Rhode Island,
 where we were lovingly received among Friends.
 After a short stay, we proceeded to Dartmouth, and were at a meeting there;
 and so through Boston, Lynn, and Salem, having meetings,
@@ -509,13 +524,16 @@ After several good opportunities among Friends at Newport,
 we returned homewards through Connecticut,
 making a short stay to rest at our friend Thomas
 Franklin`'s. Thence we went to a meeting at Newtown,
-on Long-Island, then to New York in company with several Friends, where we had a meeting,
+on Long Island, then to New York in company with several Friends, where we had a meeting,
 and then proceeded home, where I was glad to see my dear wife and family again,
 it being through the kindness of divine Providence,
 and they were very near and dear to me.
 This journey was attended with hard travel and hard labour to my body,
 also in the exercise of the gift of the ministry;
 but it was in good will and much love to the people.
+
+[.small-break]
+'''
 
 From the year 1745 to 1748, I kept much at home at our own meetings;
 yet went sometimes to other meetings in Pennsylvania and New Jersey,
