--- a/journal/modernized/03-chapter-3.adoc
+++ b/journal/modernized/03-chapter-3.adoc
@@ -198,7 +198,7 @@ when not far from the town to which I was going, I met two Friends.
 At first sight I did not know either of them, but one of them speaking to me,
 I found it to be Christopher Wilson; at which my heart was much rejoiced,
 he being a Friend who had travelled among us in the work of the ministry in America,
-and I had seen in Philadelphia, The meeting to which I intended,
+and I had seen in Philadelphia, the meeting to which I intended,
 not being held till the next day, I turned back with him to his house;
 where we had near conversation together in the love of Truth.
 Next day he accompanied me to the meeting appointed, which was a solid time;
@@ -215,7 +215,7 @@ from there was at Keswick, though small, a good meeting,
 so to Mosdale and had a large satisfactory meeting, also at Colbeck, Bolton and Wigton,
 some of which were large, and I hope tended to edification and comfort.
 I then went to Allanby, and Holm, and had large meetings,
-in which the power of Truth prevailed in a good degree; the next was at Kirk bride,
+in which the power of Truth prevailed in a good degree; the next was at Kirkbride,
 in which I had hard service,
 and a close testimony to the unconcerned in the way of Truth,
 which I left to their consideration.
@@ -614,7 +614,7 @@ and had meetings to some degree of satisfaction;
 the last named place was the furthest meeting we had in Scotland, which was pretty large.
 We came to Kilmuck, and were favoured with a comfortable meeting and somewhat large;
 the next was at New Aberdeen, also at Urie, at the seat of Robert Barclay,
-which where solid opportunities.
+which were solid opportunities.
 At Urie, there came many people, Friends and others, who behaved with solid attention,
 which made it a time of profit I hope to some.
 
@@ -711,7 +711,7 @@ though I had nothing by way of testimony in words to her condition;
 yet the weight and exercise attending my mind at that time, so reached her understanding,
 she became a plain solid Friend, and before I left England,
 I heard her in the ministry at a meeting, and as I thought,
-to the general satisfaction of Friends present, I was at Exeter meeting in Devonshire,
+to the general satisfaction of Friends present. I was at Exeter meeting in Devonshire,
 and had a weighty solid time among Friends there,
 although I was much afflicted with the conduct of one professing the Truth,
 that pleaded for carnal defence,
@@ -754,7 +754,7 @@ then passed over to Cowes on the Isle-of-Wight, and after visiting Friends there
 and being favoured with some solid meetings among them, I returned to Southampton.
 The next was a good meeting, though small, at Portsmouth;
 then a satisfactory large meeting at Chichester, and two in my way to Lewes,
-where I was at a meeting to which belonged some loving Friends,
+where I was at a meeting to which belonged some loving Friends.
 I took a meeting in my way to Kent county, and was at several as I went to Dover,
 some of which were satisfactory;
 though at Dover I had a hard time with the Friends attending the meeting.
