--- a/journal/modernized/06-chapter-6.adoc
+++ b/journal/modernized/06-chapter-6.adoc
@@ -13,7 +13,7 @@ concerning our dearly beloved friend, Daniel Stanton.
 
 When John the divine was in exile in the isle of Patmos, he heard a voice from heaven,
 saying,
-'`Write,--Blessed are the dead, who die in the Lord, from henceforth, yes says the spirit,
+"`Write,--Blessed are the dead, who die in the Lord, from henceforth, yes says the spirit,
 that they may rest from their labours,
 and their works do follow them;`" which we believe
 now is the portion of our worthy friend,
