--- a/journal/original/03-chapter-3.adoc
+++ b/journal/original/03-chapter-3.adoc
@@ -214,7 +214,7 @@ thence was at Keswick, though small, a good meeting,
 so to Mosdale and had a large satisfactory meeting, also at Colbeck, Bolton and Wigton,
 some of which were large, and I hope tended to edification and comfort.
 I then went to Allanby, and Holm, and had large meetings,
-in which the power of Truth prevailed in a good degree; the next was at Kirk bride,
+in which the power of Truth prevailed in a good degree; the next was at Kirkbride,
 in which I had hard service,
 and a close testimony to the unconcerned in the way of Truth,
 which I left to their consideration.
@@ -613,7 +613,7 @@ and had meetings to some degree of satisfaction;
 the last named place was the furthest meeting we had in Scotland, which was pretty large.
 We came to Kilmuck, and were favoured with a comfortable meeting and somewhat large;
 the next was at New Aberdeen, also at Urie, at the seat of Robert Barclay,
-which where solid opportunities.
+which were solid opportunities.
 At Urie, there came many people, Friends and others, who behaved with solid attention,
 which made it a time of profit I hope to some.
 
@@ -753,7 +753,7 @@ then passed over to Cowes on the Isle-of-Wight, and after visiting Friends there
 and being favoured with some solid meetings among them, I returned to Southampton.
 The next was a good meeting, though small, at Portsmouth;
 then a satisfactory large meeting at Chichester, and two in my way to Lewes,
-where I was at a meeting to which belonged some loving Friends,
+where I was at a meeting to which belonged some loving Friends.
 I took a meeting in my way to Kent county, and was at several as I went to Dover,
 some of which were satisfactory;
 though at Dover I had a hard time with the Friends attending the meeting.
