--- a/journal/original/05-chapter-5.adoc
+++ b/journal/original/05-chapter-5.adoc
@@ -72,7 +72,7 @@ the Forks of Brandywine, West and East Cain, Nantmill, Pikeland,
 Uwchland, Goshen, Newtown, Middletown, and Providence;
 to the last of which came my son-in-law Benedict Dorsey,
 with whom I came home to my habitation, in the enjoyment of a share of peace;
-having visited the afflicted, and several Friends families,
+having visited the afflicted, and several Friends`' families,
 and I trust faithfully laboured,
 travelling through cold and hardships and sometimes deep probations of spirit;
 but have had reverend cause to be humbly thankful to my blessed Lord and Master,
@@ -89,7 +89,7 @@ and the next day had a large meeting at this place to edification and comfort;
 thence to Richard Lundy`'s, and after a stay of two nights,
 were at a meeting in his house, where was a number of tender-hearted youth and others,
 in which the Lord was pleased to favour us with his blessed presence to satisfaction;
-the Friend informed us, that he had seventy children and grand children,
+the Friend informed us, that he had seventy children and grandchildren,
 some of whom were valuable Friends; this place is called the Great Meadows.
 
 The next meeting was near Pawlingskiln,
@@ -130,7 +130,7 @@ and the day following were at a meeting at the Nine Partners, which was large,
 and Truth reigned in a good degree among us,
 I hope to the praise of the Master of our assemblies.
 Passed over Wapping creek, and had a meeting at a Friend`'s house,
-where came many people, it was a heart-tendering time,
+where came many people, it was a heart-tendering time;
 the next place where we had two meetings was Oswego, the first of which was small,
 but a comfortable time; the other was large,
 and the word of life prevailed in a good degree among us,
@@ -393,7 +393,7 @@ so that we had no prospect of obtaining redress from him;
 yet I trust that Friends and we were clear in thus
 discharging our duty to God and man in this respect.
 I returned home on the 2nd of the month following, and enjoyed a degree of peace,
-having some solid sittings in Friends families on our return,
+having some solid sittings in Friends`' families on our return,
 and an opportunity of seeing some whom I valued in the Truth.
 
 After these two journeys this year, I kept much at home, and in obedience to the Lord,
@@ -662,4 +662,4 @@ extended towards me a poor tribulated sufferer in spirit, for the blessed seed`'
 magnified be his eminent Name! he hath hitherto been my rock, fortress, and deliverer,
 and through his great kindness, I have a fixed hope in my mind of his salvation,
 through Christ Jesus my dear redeemer,
-whose glorious name be magnified and adored tor evermore!
+whose glorious name be magnified and adored forevermore!
