--- a/journal/original/04-chapter-4.adoc
+++ b/journal/original/04-chapter-4.adoc
@@ -334,7 +334,7 @@ wherein I found an openness among Friends in the love of the gospel;
 as also where I visited the sick and the families of some Friends.
 I was at a first-day meeting at Haddonfield, and a large meeting at Chester,
 at the burial of Robert French, a Friend in the ministry,
-who was much beloved and valued as a good example among Friends where he had lived,
+who was much beloved and valued as a good example among Friends where he had lived.
 I thought these meetings were owned with the best
 of help and instruction in a good degree,
 for the profit of the people.
